# arcanum

./: .gitignore  BENCHMARK_COVERAGE.md  BENCHMARK_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.github/: CODEOWNERS
arcanum-platform/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  deny.toml
arcanum-platform/crates/arcanum-core/: Cargo.toml
arcanum-platform/crates/arcanum-core/src/: buffer.rs  encoding.rs  error.rs  key.rs  lib.rs  nonce.rs  random.rs  time.rs  traits.rs  version.rs
arcanum-platform/crates/arcanum-formats/: Cargo.toml
arcanum-platform/crates/arcanum-formats/src/: base64.rs  error.rs  hex_encoding.rs  lib.rs  pem.rs
arcanum-platform/crates/arcanum-hash/: Cargo.toml
arcanum-platform/crates/arcanum-hash/benches/: hash_benchmarks.rs
arcanum-platform/crates/arcanum-hash/src/: argon2_impl.rs  blake2_impl.rs  blake3_impl.rs  hkdf_impl.rs  lib.rs  scrypt_impl.rs  sha2_impl.rs  sha3_impl.rs  traits.rs
arcanum-platform/crates/arcanum-keystore/: Cargo.toml
arcanum-platform/crates/arcanum-keystore/src/: encrypted.rs  error.rs  file.rs  lib.rs  memory.rs  metadata.rs  traits.rs
arcanum-platform/crates/arcanum-protocols/: Cargo.toml
arcanum-platform/crates/arcanum-protocols/src/: channel.rs  error.rs  key_exchange.rs  lib.rs  session.rs
arcanum-platform/crates/arcanum-symmetric/: Cargo.toml
arcanum-platform/crates/arcanum-symmetric/benches/: symmetric_benchmarks.rs
arcanum-platform/crates/arcanum-symmetric/src/: aes_ciphers.rs  chacha_ciphers.rs  encrypted.rs  lib.rs  proptest_tests.rs  traits.rs  types.rs
arcanum-platform/crates/arcanum-zkp/: Cargo.toml
arcanum-platform/crates/arcanum-zkp/benches/: zkp_bench.rs
arcanum-platform/crates/arcanum-zkp/src/: commitment.rs  lib.rs  range_proof.rs  schnorr_proof.rs
arcanum-platform/examples/: Cargo.toml
arcanum-platform/examples/src/: hybrid_encryption.rs  lib.rs  password_encryption.rs  post_quantum_hybrid.rs  secure_channel.rs  sign_then_encrypt.rs
arcanum-platform/fuzz/: Cargo.toml
arcanum-platform/fuzz/fuzz_targets/: fuzz_aead.rs  fuzz_encoding.rs  fuzz_hash.rs  fuzz_keys.rs  fuzz_nonce.rs
benches/comparative/: Cargo.toml
benches/comparative/benches/: crypto_comparison.rs
crates/arcanum-agile/: Cargo.toml
crates/arcanum-agile/src/: containers.rs  errors.rs  lib.rs  migration.rs  policy.rs  registry.rs
crates/arcanum-asymmetric/: Cargo.toml
crates/arcanum-asymmetric/benches/: asymmetric_bench.rs  asymmetric_benchmarks.rs
crates/arcanum-asymmetric/src/: ecdh.rs  ecies.rs  lib.rs  rsa_impl.rs  traits.rs  x25519.rs  x448_impl.rs
crates/arcanum-asymmetric/tests/: wycheproof_x25519.rs
crates/arcanum-hash/: Cargo.toml
crates/arcanum-hash/benches/: hash_benchmarks.rs
crates/arcanum-hash/src/: argon2_impl.rs  blake3_impl.rs  hkdf_impl.rs  hmac_impl.rs  lib.rs  scrypt_impl.rs  sha2_impl.rs  sha3_impl.rs  traits.rs
crates/arcanum-hash/tests/: kat_vectors.rs
crates/arcanum-holocrypt/: Cargo.toml
crates/arcanum-holocrypt/benches/: holocrypt_bench.rs
crates/arcanum-holocrypt/src/: container.rs  errors.rs  layers.rs  lib.rs  pqc.rs  properties.rs  selective.rs
crates/arcanum-pqc/: Cargo.toml
crates/arcanum-pqc/benches/: pqc_benchmarks.rs
crates/arcanum-pqc/src/: dsa.rs  hybrid.rs  kem.rs  lib.rs  traits.rs
crates/arcanum-pqc/src/arcanum_dsa/: api.rs  mod.rs  params.rs  tests.rs
crates/arcanum-pqc/src/ml_dsa/: keygen.rs  mod.rs  ntt.rs  ntt_avx2.rs  params.rs  poly.rs  poly_simd.rs  rounding.rs  sampling.rs  sign.rs  verify.rs
crates/arcanum-pqc/src/ml_dsa/tests/: mod.rs
crates/arcanum-pqc/src/slh_dsa/: address.rs  fors.rs  hash.rs  hypertree.rs  mod.rs  params.rs  wots.rs  xmss.rs
crates/arcanum-pqc/src/slh_dsa/tests/: mod.rs
crates/arcanum-pqc/tests/: kat_vectors.rs  optimization_benchmarks.rs
crates/arcanum-primitives/: Cargo.toml  build.rs
crates/arcanum-primitives/benches/: primitives_bench.rs
crates/arcanum-primitives/examples/: gen_xp_vectors.rs
crates/arcanum-primitives/src/: backend.rs  batch.rs  blake3.rs  blake3_asm.rs  blake3_cuda.cu  blake3_cuda_ffi.rs  blake3_hyper.rs  blake3_monolithic.rs  blake3_simd.rs  blake3_turbo.rs  blake3_ultra.rs  blake3_wasm_simd.rs  chacha20.rs  chacha20_simd.rs  chacha20_wasm_simd.rs  chacha20poly1305.rs  ct.rs  fused.rs  keccak_avx2.rs  keccak_x4.rs  lib.rs  poly1305.rs  poly1305_simd.rs  sha2.rs  sha256_wasm_simd.rs  sha2_simd.rs  shake.rs  xp_test_vectors.rs
crates/arcanum-signatures/: Cargo.toml
crates/arcanum-signatures/benches/: signature_benchmarks.rs
crates/arcanum-signatures/src/: ecdsa_impl.rs  ed25519.rs  lib.rs  schnorr.rs  traits.rs
crates/arcanum-signatures/tests/: kat_vectors.rs  wycheproof_vectors.rs
crates/arcanum-symmetric/: Cargo.toml
crates/arcanum-symmetric/benches/: symmetric_benchmarks.rs
crates/arcanum-symmetric/src/: aes_ciphers.rs  builder.rs  chacha_ciphers.rs  encrypted.rs  lib.rs  traits.rs  types.rs
crates/arcanum-symmetric/tests/: kat_vectors.rs  wycheproof_vectors.rs
crates/arcanum-threshold/: Cargo.toml
crates/arcanum-threshold/benches/: threshold_benchmarks.rs
crates/arcanum-threshold/src/: dkg.rs  error.rs  errors.rs  feldman.rs  frost.rs  lib.rs  proactive.rs  shamir.rs  traits.rs
crates/arcanum-verify/: Cargo.toml
crates/arcanum-verify/src/: errors.rs  lib.rs  reports.rs  timing.rs
crates/arcanum-wasm/: Cargo.toml
crates/arcanum-wasm/src/: asymmetric.rs  error.rs  hash.rs  kdf.rs  lib.rs  random.rs  symmetric.rs
crates/arcanum-wasm/tests/: spec_tests.rs
crates/arcanum-wasm/tests/js/: bench-compare.mjs  bench-results.json  bench-simd.mjs  bench.mjs  package.json  test-crypto-interop.mjs  test-simd.mjs  test.mjs
crates/arcanum-zkp/: Cargo.toml
crates/arcanum-zkp/benches/: zkp_bench.rs  zkp_benchmarks.rs
crates/arcanum-zkp/src/: commitment.rs  lib.rs  range_proof.rs  schnorr_proof.rs  traits.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aes_gcm.rs  fuzz_blake3.rs  fuzz_chacha20poly1305.rs  fuzz_ed25519.rs  fuzz_ml_dsa.rs  fuzz_ml_kem.rs  fuzz_p256.rs  fuzz_x25519.rs
(+85 files in other folders)
