[package]
name = "arcanum-asymmetric"
version = "0.1.0"
edition = "2024"
authors = ["Daemoniorum <daemoniorum@persona.dev>"]
description = "Asymmetric cryptography: RSA, ECIES, key exchange"
license = "MIT OR Apache-2.0"
repository = "https://github.com/daemoniorum/arcanum"
keywords = ["cryptography", "rsa", "ecies", "x25519", "ecdh"]
categories = ["cryptography"]

[dependencies]
arcanum-core = { path = "../arcanum-core" }

# RSA
rsa = { version = "0.9", features = ["sha2", "hazmat"] }

# Elliptic curves
elliptic-curve = { version = "0.13", features = ["sec1", "pkcs8", "ecdh"] }
p256 = { version = "0.13", features = ["ecdh", "pkcs8"] }
p384 = { version = "0.13", features = ["ecdh", "pkcs8"] }
k256 = { version = "0.13", features = ["ecdh", "pkcs8"] }

# X25519/X448 key exchange
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
x448 = "0.4"

# AEAD for ECIES
chacha20poly1305 = "0.10"
aes-gcm = "0.10"

# Key derivation for ECIES
hkdf = "0.12"
sha2 = "0.10"

# Utilities
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
hex = "0.4"
subtle = "2.5"
pkcs8 = { version = "0.10", features = ["std", "encryption"] }
spki = "0.7"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[features]
default = ["rsa", "ecies", "x25519", "x448"]
rsa = []
ecies = []
x25519 = []
x448 = []
serde = ["dep:serde"]

[[bench]]
name = "asymmetric_bench"
harness = false
